@@ -3,6 +3,7 @@
 * Development
 
 - compat-27: Add generalized variables for ~decoded-time-*~.
+- compat-28: Add ~macroexp-warn-and-return~.
 
 * Release of "Compat" Version 29.1.1.1
 
